Major clean up for Datadog